// Vitest Snapshot v1

exports[`NoticeBar > NoticeBar baseVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <!---->
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <span
        class="t-notice-bar__operation"
      >
        <!---->
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <!--v-if-->
</div>
`;

exports[`NoticeBar > NoticeBar customVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info cover-class"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    
    <svg
      class="t-icon t-icon-sound"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 11l4.24 2.55a.5.5 0 00.76-.43V2.88a.5.5 0 00-.76-.43L4 5H2.1a.6.6 0 00-.6.6v4.8c0 .33.27.6.6.6H4zm1-5.43l3-1.8v8.46l-3-1.8V5.57zM4 10H2.5V6H4v4zM13.52 5.73a6 6 0 00-1.4-1.95l.68-.73c.7.65 1.25 1.42 1.63 2.27a6.6 6.6 0 01-1.63 7.63l-.68-.73a6 6 0 001.4-1.95 5.6 5.6 0 000-4.54z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M11.5 8c0-.87-.36-1.75-1.07-2.45l.7-.72c.9.88 1.37 2.02 1.37 3.17 0 1.16-.48 2.29-1.38 3.17l-.7-.72A3.44 3.44 0 0011.5 8z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        <!---->
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-chevron-right"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar customizationVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          style="margin-left: 2px;"
          target=""
        >
          <!--v-if-->
          <span
            class="t-link__content"
          >
            
            详情
            
          </span>
          <!--v-if-->
        </a>
        
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar eventVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的消息通知
        <span
          class="t-notice-bar__operation"
        >
          
          <a
            aria-disabled="false"
            class="t-link t-link--primary t-link--medium"
            style="margin-left: 5px;"
            target=""
          >
            <!--v-if-->
            <span
              class="t-link__content"
            >
              
              详情
              
            </span>
            <!--v-if-->
          </a>
          
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        这是一条普通的通知信息
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <div
      class="t-notice-bar__suffix-icon"
    >
      <svg
        class="t-icon t-icon-chevron-right"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar iconDemoVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      提示文字描述提示文字描述提示文字描述
      <span
        class="t-notice-bar__operation"
      >
        <!---->
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <!--v-if-->
</div>
`;

exports[`NoticeBar > NoticeBar mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    NoticeBar 公告栏
  </h1>
  <p
    class="summary"
  >
    在导航栏下方，用于给用户显示提示消息。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        纯文字的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <!---->
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带图标的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带关闭的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        带入口的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的消息通知
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 5px;"
                target=""
              >
                <!--v-if-->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!--v-if-->
              </a>
              
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            这是一条普通的通知信息
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定样式的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info cover-class"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4 11l4.24 2.55a.5.5 0 00.76-.43V2.88a.5.5 0 00-.76-.43L4 5H2.1a.6.6 0 00-.6.6v4.8c0 .33.27.6.6.6H4zm1-5.43l3-1.8v8.46l-3-1.8V5.57zM4 10H2.5V6H4v4zM13.52 5.73a6 6 0 00-1.4-1.95l.68-.73c.7.65 1.25 1.42 1.63 2.27a6.6 6.6 0 01-1.63 7.63l-.68-.73a6 6 0 001.4-1.95 5.6 5.6 0 000-4.54z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M11.5 8c0-.87-.36-1.75-1.07-2.45l.7-.72c.9.88 1.37 2.02 1.37 3.17 0 1.16-.48 2.29-1.38 3.17l-.7-.72A3.44 3.44 0 0011.5 8z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-chevron-right"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M6.46 12.46l-.92-.92L9.08 8 5.54 4.46l.92-.92L10.92 8l-4.46 4.46z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自定义内容的公告栏
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述提示文字描述
            <span
              class="t-notice-bar__operation"
            >
              
              <a
                aria-disabled="false"
                class="t-link t-link--primary t-link--medium"
                style="margin-left: 2px;"
                target=""
              >
                <!--v-if-->
                <span
                  class="t-link__content"
                >
                  
                  详情
                  
                </span>
                <!--v-if-->
              </a>
              
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <div
          class="t-notice-bar__suffix-icon"
        >
          
          <svg
            class="t-icon t-icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        公告栏类型有普通（info）、警示（warning）、成功（success）、错误（error）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            默认状态公告栏默认状态公告栏
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-check-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            成功状态公告栏成功状态公告栏
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            警示状态公告栏警示状态公告栏
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--error"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-close-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            错误状态公告栏错误状态公告栏
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 可 滚动的公告栏
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        可滚动公告栏有水平 (horizontal) 和垂直 (vertical)
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <!---->
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div
            class="t-notice-bar__content t-notice-bar__content-wrapable"
            style=""
          >
            提示文字描述提示文字描述提示文字描述提示文字描述文
            <span
              class="t-notice-bar__operation"
            >
              <!---->
            </span>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      <div
        class="t-notice-bar t-notice-bar--info"
      >
        <!-- prefixIcon -->
        <div
          class="t-notice-bar__prefix-icon"
        >
          
          <svg
            class="t-icon t-icon-sound"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M4 11l4.24 2.55a.5.5 0 00.76-.43V2.88a.5.5 0 00-.76-.43L4 5H2.1a.6.6 0 00-.6.6v4.8c0 .33.27.6.6.6H4zm1-5.43l3-1.8v8.46l-3-1.8V5.57zM4 10H2.5V6H4v4zM13.52 5.73a6 6 0 00-1.4-1.95l.68-.73c.7.65 1.25 1.42 1.63 2.27a6.6 6.6 0 01-1.63 7.63l-.68-.73a6 6 0 001.4-1.95 5.6 5.6 0 000-4.54z"
              fill="currentColor"
              fill-opacity="0.9"
            />
            <path
              d="M11.5 8c0-.87-.36-1.75-1.07-2.45l.7-.72c.9.88 1.37 2.02 1.37 3.17 0 1.16-.48 2.29-1.38 3.17l-.7-.72A3.44 3.44 0 0011.5 8z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
          
        </div>
        <!-- content -->
        <div
          class="t-notice-bar__content-wrap"
        >
          <div>
            <div
              class="t-swiper t-notice-bar__content--vertical"
              style="height: 22px; overflow: hidden;"
            >
              <div
                class="t-swiper__container"
                style="height: 22px; flex-direction: column;"
              >
                
                
                <div
                  class="t-swiper-item"
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    君不见
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    高堂明镜悲白发
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    朝如青丝暮成雪
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    人生得意须尽欢
                  </div>
                  
                </div>
                <div
                  class="t-swiper-item"
                >
                  
                  <div
                    class="t-notice-bar__content--vertical-item"
                  >
                    莫使金樽空对月
                  </div>
                  
                </div>
                
                
              </div>
              <!--v-if-->
            </div>
          </div>
        </div>
        <!-- suffixIcon -->
        <!--v-if-->
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar scrollingVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <!---->
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        提示文字描述提示文字描述提示文字描述提示文字描述文
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--info"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-sound"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M4 11l4.24 2.55a.5.5 0 00.76-.43V2.88a.5.5 0 00-.76-.43L4 5H2.1a.6.6 0 00-.6.6v4.8c0 .33.27.6.6.6H4zm1-5.43l3-1.8v8.46l-3-1.8V5.57zM4 10H2.5V6H4v4zM13.52 5.73a6 6 0 00-1.4-1.95l.68-.73c.7.65 1.25 1.42 1.63 2.27a6.6 6.6 0 01-1.63 7.63l-.68-.73a6 6 0 001.4-1.95 5.6 5.6 0 000-4.54z"
          fill="currentColor"
          fill-opacity="0.9"
        />
        <path
          d="M11.5 8c0-.87-.36-1.75-1.07-2.45l.7-.72c.9.88 1.37 2.02 1.37 3.17 0 1.16-.48 2.29-1.38 3.17l-.7-.72A3.44 3.44 0 0011.5 8z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
      
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div>
        <div
          class="t-swiper t-notice-bar__content--vertical"
          style="height: 22px; overflow: hidden;"
        >
          <div
            class="t-swiper__container"
            style="height: 22px; flex-direction: column;"
          >
            
            
            <div
              class="t-swiper-item"
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                君不见
              </div>
              
            </div>
            <div
              class="t-swiper-item"
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                高堂明镜悲白发
              </div>
              
            </div>
            <div
              class="t-swiper-item"
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                朝如青丝暮成雪
              </div>
              
            </div>
            <div
              class="t-swiper-item"
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                人生得意须尽欢
              </div>
              
            </div>
            <div
              class="t-swiper-item"
            >
              
              <div
                class="t-notice-bar__content--vertical-item"
              >
                莫使金樽空对月
              </div>
              
            </div>
            
            
          </div>
          <!--v-if-->
        </div>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  
</div>
`;

exports[`NoticeBar > NoticeBar suffixIconVue demo works fine 1`] = `
<div
  class="t-notice-bar t-notice-bar--info"
>
  <!-- prefixIcon -->
  <div
    class="t-notice-bar__prefix-icon"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
  </div>
  <!-- content -->
  <div
    class="t-notice-bar__content-wrap"
  >
    <div
      class="t-notice-bar__content t-notice-bar__content-wrapable"
      style=""
    >
      这是一条普通的通知信息
      <span
        class="t-notice-bar__operation"
      >
        <!---->
      </span>
    </div>
  </div>
  <!-- suffixIcon -->
  <div
    class="t-notice-bar__suffix-icon"
  >
    
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
  </div>
</div>
`;

exports[`NoticeBar > NoticeBar themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="t-notice-bar t-notice-bar--info notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        默认状态公告栏默认状态公告栏
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--success notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        成功状态公告栏成功状态公告栏
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--warning notice-bar-demo-block"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        警示状态公告栏警示状态公告栏
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  <div
    class="t-notice-bar t-notice-bar--error"
  >
    <!-- prefixIcon -->
    <div
      class="t-notice-bar__prefix-icon"
    >
      <svg
        class="t-icon t-icon-close-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.67 4.95L8 7.29l2.33-2.34.7.7L8.7 8l2.34 2.35-.71.7L8 8.71l-2.33 2.34-.7-.7L7.3 8 4.96 5.65l.71-.7z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <!-- content -->
    <div
      class="t-notice-bar__content-wrap"
    >
      <div
        class="t-notice-bar__content t-notice-bar__content-wrapable"
        style=""
      >
        错误状态公告栏错误状态公告栏
        <span
          class="t-notice-bar__operation"
        >
          <!---->
        </span>
      </div>
    </div>
    <!-- suffixIcon -->
    <!--v-if-->
  </div>
  
</div>
`;
